<resources>
    <string name="app_name">Stu5</string>
    <string name="userHint">请输入用户名/手机/邮箱</string>
    <string name="passwordHint">密码</string>
    <string name="loginButton">登陆</string>
    <string name="forgetPassword">忘记密码 ?</string>
    <string name="registerState">现在注册 ></string>
    <string name="otherLoginState">一使用其他方式登陆一</string>
    <string name="weChatLogin">微信登陆</string>
    <string name="QQLogin">QQ登陆</string>
    <string name="findPassword">找回密码</string>
    <string name="register">注册</string>
    <string name="userState">&#60;壹家教用户使用协议&#62; </string>
</resources>
