<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e4e2e2"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.dream.xukuan.stu5.WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="20dp">
        <EditText
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:drawablePadding="10dp"
            style="@style/editHint"
            android:inputType="number"
            android:background="@drawable/edit_shape"
            android:drawableLeft="@drawable/r_me"
            android:hint="@string/userHint"/>
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:drawablePadding="10dp"
            style="@style/editHint"
            android:inputType="numberPassword"
            android:background="@drawable/edit_shape"
            android:drawableLeft="@drawable/r_password"
            android:hint="@string/passwordHint"/>
        <Button
            android:onClick="login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            style="@style/loginButton1"
            android:text="@string/loginButton"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">
            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/forgetPassword"
                style="@style/registerState"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/registerState"
                style="@style/registerState"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otherLoginState"
            android:layout_margin="20dp"
            style="@style/otherLoginState"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/edit_shape"
                android:padding="10dp"
                android:drawableLeft="@drawable/weixin"
                android:layout_margin="5dp"
                android:text="@string/weChatLogin"
                style="@style/otherLogin"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:text="@string/QQLogin"
                android:drawableLeft="@drawable/qq2"
                style="@style/otherLogin"
                android:background="@drawable/edit_shape"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
